// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds profile views creates new profile 1`] = `
Object {
  "did": "user(0)",
  "displayName": "danny boy",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [
    Object {
      "cts": "1970-01-01T00:00:00.000Z",
      "neg": false,
      "src": "did:example:labeler",
      "uri": "user(0)",
      "val": "repo-action-label",
    },
  ],
  "postsCount": 2,
  "viewer": Object {
    "muted": false,
  },
}
`;

exports[`pds profile views fetches multiple profiles 1`] = `
Array [
  Object {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "description": "its me!",
    "did": "user(0)",
    "displayName": "ali",
    "followersCount": 2,
    "followsCount": 3,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 4,
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
  Object {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "description": "hi im bob label_me",
    "did": "user(1)",
    "displayName": "bobby",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 3,
    "viewer": Object {
      "muted": false,
    },
  },
  Object {
    "did": "user(2)",
    "followersCount": 2,
    "followsCount": 1,
    "handle": "carol.test",
    "labels": Array [],
    "postsCount": 2,
    "viewer": Object {
      "following": "record(2)",
      "muted": false,
    },
  },
  Object {
    "did": "user(3)",
    "followersCount": 1,
    "followsCount": 1,
    "handle": "dan.test",
    "labels": Array [
      Object {
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "user(3)",
        "val": "repo-action-label",
      },
    ],
    "postsCount": 2,
    "viewer": Object {
      "followedBy": "record(3)",
      "muted": false,
    },
  },
]
`;

exports[`pds profile views fetches other's profile, with a follow 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "followedBy": "record(1)",
    "following": "record(0)",
    "muted": false,
  },
}
`;

exports[`pds profile views fetches other's profile, without a follow 1`] = `
Object {
  "did": "user(0)",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "labels": Array [
    Object {
      "cts": "1970-01-01T00:00:00.000Z",
      "neg": false,
      "src": "did:example:labeler",
      "uri": "user(0)",
      "val": "repo-action-label",
    },
  ],
  "postsCount": 2,
  "viewer": Object {
    "followedBy": "record(0)",
    "muted": false,
  },
}
`;

exports[`pds profile views fetches own profile 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "muted": false,
  },
}
`;

exports[`pds profile views handles avatars & banners 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "banner": "https://pds.public.url/image/ejOTK5gy9tlarOXM6MhrPOs0C18LFpfd9qQ9lBrcIBE/rs:fill:3000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
  "description": "new descript",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "muted": false,
  },
}
`;

exports[`pds profile views handles unsetting profile fields 1`] = `
Object {
  "did": "user(0)",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "muted": false,
  },
}
`;

exports[`pds profile views updates profile 1`] = `
Object {
  "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "description": "new descript",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 4,
  "viewer": Object {
    "muted": false,
  },
}
`;
